Use Fira font also for math

--- a/beamerouterthemefocus.sty
+++ b/beamerouterthemefocus.sty
@@ -278,7 +278,7 @@
 
 % Enable noframenumbering option.
 \define@key{beamerframe}{noframenumbering}[true]{%
-    \setbeamertemplate{footline}[none]%
+    \setbeamertemplate{footline}[noframenumbering]%
     \setlength{\focus@pbar@height}{0cm}%
     \focus@calculatefootheight%
 }
