--- a/beamerfontthemefocus.sty
+++ b/beamerfontthemefocus.sty
@@ -1,7 +1,7 @@
-% Copyright (C) 2018-2022 Pasquale Claudio Africa and the LaTeX community.
+% Copyright (C) 2018 - 2023 Pasquale Claudio Africa and the LaTeX community.
 % A full list of contributors can be found at
 %
-%     https://github.com/elauksap/focus-beamertheme
+%     https://github.com/pcafrica/focus-beamertheme
 % 
 % This file is part of beamerthemefocus.
 % 
